--- a/po/fr_FR.po
+++ b/po/fr_FR.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-04-10 10:02+0100\n"
+"POT-Creation-Date: 2019-04-13 18:56+0100\n"
 "PO-Revision-Date: 2019-04-05 08:39+0100\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: French\n"
@@ -177,11 +177,18 @@ msgid ""
 "\thelp - show the help menu\n"
 "\n"
 "Settings/Plugins/Preferences:\n"
-"\tShow/Hide Calculate, Help and History toggle buttons\n"
+"\tShow/Hide Function, Calculate and Help buttons\n"
 "\tHistory Settings: max Results -this is the number of results that will be "
 "stored in the history pulldown. The history pulldown will contain five times "
 "this value\n"
-"\tLog to opencpn: Enable/Disable logging of results to opencpn logfile."
+"\tLog to opencpn: Enable/Disable logging of results to opencpn logfile.\n"
+"\n"
+"Calculate Button:\n"
+"\tEnter the expression in the input box: e.g. 4+2. Do NOT use the = sign. "
+"\"Enter\" or press \"Calculate\".\n"
+"\tIf you are using \"History\" the results will appear there. If not the "
+"result will appear in the input box.\n"
+"\tIf you make a mistake, press \"Calculate\" to clear the input box.  "
 msgstr ""
 #
 msgid "Calculator Preferences"
@@ -323,14 +330,8 @@ msgstr "Aide !!!!"
 msgid "History"
 msgstr "Historique"
 #
-msgid "History Pulldown"
-msgstr "Développer l'historique"
-#
 msgid "History Settings"
 msgstr "Réglage de l'historique"
-#
-msgid "History Toggle"
-msgstr "Bascule de l'historique"
 #
 msgid "Hull Speed"
 msgstr "Vitesse de la coque"
@@ -545,12 +546,6 @@ msgstr ""
 msgid "Show/Hide history"
 msgstr "Voir/cacher l'historique"
 #
-msgid ""
-"Show/Hide history toggle (you can always type \"history\" from input window)."
-msgstr ""
-"Montrer/Cacher le bouton bascule \"Historique\". (Vous pourrez toujours "
-"entrer \"historique\" depuis la fenêtre d'entrée)."
-#
 msgid "Speed of wind-driven current"
 msgstr ""
 #
@@ -667,6 +662,7 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "\""
 #~ msgstr "\""
 #
@@ -674,8 +670,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "'"
 #~ msgstr "'"
+#
 #
 #
 #
@@ -696,8 +694,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "(5/9)*(VAR-491.67)=(9/5)*(VAR + 273.15)"
 #~ msgstr "(5/9)*(VAR-491.67)=(9/5)*(VAR + 273.15)"
+#
 #
 #
 #
@@ -718,8 +718,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "0.0001"
 #~ msgstr "0.0001"
+#
 #
 #
 #
@@ -740,8 +742,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "0.01"
 #~ msgstr "0.01"
+#
 #
 #
 #
@@ -762,8 +766,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "0.03386"
 #~ msgstr "0.03386"
+#
 #
 #
 #
@@ -784,8 +790,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "0.092903"
 #~ msgstr "0.092903"
+#
 #
 #
 #
@@ -806,8 +814,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "0.3048"
 #~ msgstr "0.3048"
+#
 #
 #
 #
@@ -828,8 +838,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "0.987"
 #~ msgstr "0.987"
+#
 #
 #
 #
@@ -850,8 +862,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "1.8288"
 #~ msgstr "1.8288"
+#
 #
 #
 #
@@ -872,8 +886,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "15850.3231"
 #~ msgstr "15850.3231"
+#
 #
 #
 #
@@ -894,8 +910,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "1e-05"
 #~ msgstr "1e-05"
+#
 #
 #
 #
@@ -916,8 +934,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "2.20462"
 #~ msgstr "2.20462"
+#
 #
 #
 #
@@ -938,8 +958,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "3600"
 #~ msgstr "3600"
+#
 #
 #
 #
@@ -960,8 +982,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "4.4482216"
 #~ msgstr "4.4482216"
+#
 #
 #
 #
@@ -982,8 +1006,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "60000"
 #~ msgstr "60000"
+#
 #
 #
 #
@@ -1004,8 +1030,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "A"
 #~ msgstr "A"
+#
 #
 #
 #
@@ -1026,8 +1054,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "Angle_In"
 #~ msgstr "Angle_In"
+#
 #
 #
 #
@@ -1048,8 +1078,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "Area"
 #~ msgstr "Zone"
+#
 #
 #
 #
@@ -1070,6 +1102,7 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "Beaufort=(Wind_Speed/0.837)^(2/3)"
 #~ msgstr "Beaufort=(Wind_Speed/0.837)^(2/3)"
 #
@@ -1078,8 +1111,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "CLEAR"
 #~ msgstr "EFFACER"
+#
 #
 #
 #
@@ -1100,6 +1135,7 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid ""
 #~ "Change_in_height_of_Tide =  (height/2) * (1-cos(dtr*180 * time_ratio))"
 #~ msgstr ""
@@ -1110,8 +1146,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "Clear"
 #~ msgstr "Effacer"
+#
 #
 #
 #
@@ -1128,8 +1166,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "Degree (°)"
 #~ msgstr "Degrées (°)"
+#
 #
 #
 #
@@ -1142,8 +1182,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "Degrees"
 #~ msgstr "Degrées"
+#
 #
 #
 #
@@ -1164,8 +1206,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "Distance"
 #~ msgstr "Distance"
+#
 #
 #
 #
@@ -1186,8 +1230,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "Distance_Out=Distance_In"
 #~ msgstr "Distance_Out=Distance_In"
+#
 #
 #
 #
@@ -1205,8 +1251,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "FUNCTION"
 #~ msgstr "FONCTION"
+#
 #
 #
 #
@@ -1227,8 +1275,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "Flowrate"
 #~ msgstr "Flux"
+#
 #
 #
 #
@@ -1249,8 +1299,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "Flowrate_Out=Flowrate_In"
 #~ msgstr "Flowrate_Out=Flowrate_In"
+#
 #
 #
 #
@@ -1264,9 +1316,11 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #~ msgstr "Forcer"
 #
 #
+#
 #, fuzzy
 #~ msgid "Function result is a string."
 #~ msgstr "Sélectionner les unités des résultats de la fonction"
+#
 #
 #
 #
@@ -1284,8 +1338,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "HELP"
 #~ msgstr "AIDE"
+#
 #
 #
 #
@@ -1300,8 +1356,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "HIDEHELP"
 #~ msgstr "CACHER L'AIDE"
+#
 #
 #
 #
@@ -1316,8 +1374,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "HISTORY"
 #~ msgstr "HISTORIQUE"
+#
 #
 #
 #
@@ -1332,6 +1392,7 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "HideHelp"
 #~ msgstr "Cacher l'aide"
 #
@@ -1340,8 +1401,18 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "HideHistory"
 #~ msgstr "Historique : Cacher"
+#
+#
+#~ msgid "History Pulldown"
+#~ msgstr "Développer l'historique"
+#
+#
+#~ msgid "History Toggle"
+#~ msgstr "Bascule de l'historique"
+#
 #
 #
 #
@@ -1362,8 +1433,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "Inches of Mercury"
 #~ msgstr "Pouce de mercure"
+#
 #
 #
 #
@@ -1384,8 +1457,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "L"
 #~ msgstr "L"
+#
 #
 #
 #
@@ -1402,8 +1477,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "Lat "
 #~ msgstr "Lat "
+#
 #
 #
 #
@@ -1420,8 +1497,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "Lbs (weight)"
 #~ msgstr "Lbs (poids)"
+#
 #
 #
 #
@@ -1434,8 +1513,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "Longitude"
 #~ msgstr "Longitude"
+#
 #
 #
 #
@@ -1456,8 +1537,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "Meter"
 #~ msgstr "Mètre"
+#
 #
 #
 #
@@ -1478,8 +1561,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "Nautical Miles"
 #~ msgstr "Milles nautiques"
+#
 #
 #
 #
@@ -1500,8 +1585,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "Pressure"
 #~ msgstr "Pression"
+#
 #
 #
 #
@@ -1522,8 +1609,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "Pressure_In"
 #~ msgstr "Pressure_In"
+#
 #
 #
 #
@@ -1544,8 +1633,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "Q = 3600 *(A)* (H)"
 #~ msgstr "Q = 3600 *(A)* (H)"
+#
 #
 #
 #
@@ -1563,8 +1654,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "SHOWFUNCTION"
 #~ msgstr "FONCTION : VOIR"
+#
 #
 #
 #
@@ -1579,8 +1672,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "SHOWHISTORY"
 #~ msgstr "HISTORIQUE : VOIR"
+#
 #
 #
 #
@@ -1601,8 +1696,18 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "See table"
 #~ msgstr "Voir la table"
+#
+#
+#~ msgid ""
+#~ "Show/Hide history toggle (you can always type \"history\" from input "
+#~ "window)."
+#~ msgstr ""
+#~ "Montrer/Cacher le bouton bascule \"Historique\". (Vous pourrez toujours "
+#~ "entrer \"historique\" depuis la fenêtre d'entrée)."
+#
 #
 #
 #
@@ -1617,6 +1722,7 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "ShowHelp"
 #~ msgstr "Aide : Voir"
 #
@@ -1625,8 +1731,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "ShowHistory"
 #~ msgstr "Historique : Voir"
+#
 #
 #
 #
@@ -1647,8 +1755,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "Speed_Current = 0.03 * (Speed_Wind)"
 #~ msgstr "Speed_Current = 0.03 * (Vitesse_Wind)"
+#
 #
 #
 #
@@ -1669,8 +1779,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "Speed_Out=Speed_In"
 #~ msgstr "Speed_Out=Speed_In"
+#
 #
 #
 #
@@ -1691,8 +1803,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "Square cm"
 #~ msgstr "Cm carré"
+#
 #
 #
 #
@@ -1713,8 +1827,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "Square meter"
 #~ msgstr "Mètre carré"
+#
 #
 #
 #
@@ -1735,8 +1851,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "TRUE"
 #~ msgstr "Vrai"
+#
 #
 #
 #
@@ -1757,12 +1875,14 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid ""
 #~ "T_wind_chill = 13.12 + 0.6215 * T_air - 11.37 * V_wind^0.16 + 0.3965 * "
 #~ "T_air* V_wind^0.16 "
 #~ msgstr ""
 #~ "T_wind_chill = 13.12 + 0.6215 * T_air - 11.37 * V_wind^0.16 + 0.3965 * "
 #~ "T_air* V_wind^0.16 "
+#
 #
 #
 #
@@ -1783,8 +1903,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "Time"
 #~ msgstr "Temps"
+#
 #
 #
 #
@@ -1805,8 +1927,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "US gallons per minute"
 #~ msgstr "gallons américains par minute"
+#
 #
 #
 #
@@ -1827,8 +1951,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "VAR - 273.15=VAR + 273.15"
 #~ msgstr "VAR - 273.15=VAR + 273.15"
+#
 #
 #
 #
@@ -1849,8 +1975,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "VAR/dtr=VAR*dtr"
 #~ msgstr "VAR/dtr=VAR*dtr"
+#
 #
 #
 #
@@ -1871,8 +1999,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "VMG=V*cos(alpha*dtr)"
 #~ msgstr "VMG=V*cos(alpha*dtr)"
+#
 #
 #
 #
@@ -1893,8 +2023,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "Wave_speed = 3.03 * (wave_period)"
 #~ msgstr "Wave_speed = 3.03 * (wave_period)"
+#
 #
 #
 #
@@ -1916,6 +2048,7 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #~ "F_star=F_hat/Cd,F_tilde=CDU10*F_star ,H_tilde=0.3*alpha*(1-"
 #~ "(1+0.004*sqrt(F_tilde/alpha))^-2) ,H_star=H_tilde/CDU10 ,H_hat=H_star*Cd ,"
 #~ "Waveheight=H_hat*(U10^2)/9.80665"
+#
 #
 #
 #
@@ -1936,8 +2069,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "Wind_Speed"
 #~ msgstr "Wind_Speed"
+#
 #
 #
 #
@@ -1958,8 +2093,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "alpha"
 #~ msgstr "alpha"
+#
 #
 #
 #
@@ -1980,8 +2117,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "alpha2"
 #~ msgstr "alpha2"
+#
 #
 #
 #
@@ -2002,8 +2141,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "atm"
 #~ msgstr "atm"
+#
 #
 #
 #
@@ -2024,8 +2165,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "breaking_strength= 900 * comparison_factor * (pi*diameter)^2 "
 #~ msgstr "breaking_strength= 900 * comparison_factor * (pi*diameter)^2 "
+#
 #
 #
 #
@@ -2046,6 +2189,7 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "circumference"
 #~ msgstr "circonférence"
 #
@@ -2054,8 +2198,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "clear"
 #~ msgstr "effacer"
+#
 #
 #
 #
@@ -2076,8 +2222,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "density"
 #~ msgstr "densité"
+#
 #
 #
 #
@@ -2098,8 +2246,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "dewpoint"
 #~ msgstr "Point de rosée"
+#
 #
 #
 #
@@ -2120,8 +2270,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "distance_horizon=sqrt(height* (height + 12756.32))"
 #~ msgstr "distance_horizon=sqrt(height* (height + 12756.32))"
+#
 #
 #
 #
@@ -2137,6 +2289,7 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #~ msgstr ""
 #~ "distance_visible=sqrt(height_observer * (height_observer + 12756.32)) + "
 #~ "sqrt(height_object * (height_object + 12756.32))"
+#
 #
 #
 #
@@ -2157,8 +2310,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "draft_heeled=draft*cos(dtr*angle)"
 #~ msgstr "draft_heeled=draft*cos(dtr*angle)"
+#
 #
 #
 #
@@ -2169,6 +2324,7 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #, fuzzy
 #~ msgid "ere"
 #~ msgstr "Degré"
+#
 #
 #
 #
@@ -2189,6 +2345,7 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "foot"
 #~ msgstr "pied"
 #
@@ -2197,8 +2354,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "function"
 #~ msgstr "fonction"
+#
 #
 #
 #
@@ -2219,8 +2378,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "height"
 #~ msgstr "hauteur"
+#
 #
 #
 #
@@ -2241,8 +2402,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "height_observer"
 #~ msgstr "height_observer"
+#
 #
 #
 #
@@ -2257,8 +2420,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "hidefunction"
 #~ msgstr "fonction : cacher"
+#
 #
 #
 #
@@ -2273,6 +2438,7 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "hidehistory"
 #~ msgstr "historique : cacher"
 #
@@ -2281,8 +2447,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "history"
 #~ msgstr "historique"
+#
 #
 #
 #
@@ -2307,8 +2475,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "inch"
 #~ msgstr "pouce"
+#
 #
 #
 #
@@ -2329,8 +2499,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "kg"
 #~ msgstr "kg"
+#
 #
 #
 #
@@ -2351,8 +2523,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "kg/m3"
 #~ msgstr "kg/m3"
+#
 #
 #
 #
@@ -2373,8 +2547,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "km/h"
 #~ msgstr "km/h"
+#
 #
 #
 #
@@ -2395,8 +2571,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "lbs"
 #~ msgstr "lbs"
+#
 #
 #
 #
@@ -2417,8 +2595,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "m/s"
 #~ msgstr "m / s"
+#
 #
 #
 #
@@ -2439,8 +2619,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "mBar"
 #~ msgstr "mBar"
+#
 #
 #
 #
@@ -2461,6 +2643,7 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "mmHg"
 #~ msgstr "mmHG"
 #
@@ -2468,8 +2651,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "no limit to decimals"
 #~ msgstr "aucune limite aux décimales"
+#
 #
 #
 #
@@ -2487,8 +2672,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "showfunction"
 #~ msgstr "fonction : voir"
+#
 #
 #
 #
@@ -2503,8 +2690,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "showhistory"
 #~ msgstr "historique : voir"
+#
 #
 #
 #
@@ -2525,8 +2714,10 @@ msgstr "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 #
 #
 #
+#
 #~ msgid "vhull=1.34*sqrt(LWL)"
 #~ msgstr "vhull=1.34*sqrt(LWL)"
+#
 #
 #
 #
